--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^2.0.5",
     "source-map-loader": "^1.0.0",
     "ts-loader": "^7.0.5",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.9.3",
     "webpack": "^4.11.0",
     "webpack-cli": "^3.0.2",
