--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "format": "prettier \"**/*.{tsx,html}\" --write"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "ol": "6.3.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "css-loader": "^3.5.3",
     "prettier": "^2.0.5",
     "source-map-loader": "^1.0.0",
+    "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.9.3",
