--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build:app": "webpack -p --config app/webpack.config.js",
     "dev:elements": "webpack-dev-server --config elements/webpack.config.js --mode development",
     "build:elements": "webpack -p --config elements/webpack.config.js",
-    "format": "prettier \"**/*.{tsx,html}\" --write"
+    "format": "prettier \"**/*.{tsx,html}\" --write",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
@@ -17,8 +19,16 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@storybook/addon-a11y": "^5.3.19",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/preset-typescript": "^3.0.0",
+    "@storybook/react": "^5.3.19",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
     "prettier": "^2.0.5",
     "source-map-loader": "^1.0.0",
